// ============================================
// Database Schema - Interior Design AI App
// ============================================
// Complete schema dengan User Management & Admin Panel

Project interior_design_ai {
  database_type: 'MySQL'
  Note: '''
    # Interior Design AI Application - Complete Schema
    - User Management & Authentication
    - Admin Panel Management
    - CMS Content & Theme
    - Furniture Catalog
    - News & Articles
    - FAQ & Q&A System
  '''
}

// ============================================
// CORE TABLES - User Management & Auth
// ============================================

Table users {
  id int [pk, increment]
  username varchar(50) [unique, not null]
  email varchar(100) [unique, not null]
  password varchar(255) [not null, note: 'Hashed password']
  full_name varchar(100) [not null]
  phone varchar(20)
  
  // Role Management
  role enum('admin', 'user') [default: 'user', note: 'User role']
  
  // Status
  is_active tinyint(1) [default: 1]
  email_verified tinyint(1) [default: 0]
  
  // Timestamps
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  last_login datetime [note: 'Last login timestamp']
  
  Indexes {
    username [name: 'idx_username']
    email [name: 'idx_email']
    role [name: 'idx_role']
    (email, password) [name: 'idx_login']
  }
  
  Note: '''
    User accounts:
    - admin: Full access ke admin panel
    - user: Regular users (dapat save layouts, dll)
  '''
}

Table user_sessions {
  id int [pk, increment]
  user_id int [not null]
  session_token varchar(255) [unique, not null, note: 'JWT token atau session ID']
  ip_address varchar(45)
  user_agent text
  expires_at datetime [not null]
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    user_id [name: 'idx_session_user']
    session_token [name: 'idx_session_token']
    expires_at [name: 'idx_session_expires']
  }
  
  Note: 'User login sessions tracking'
}

// ============================================
// CMS TABLES
// ============================================

Table cms {
  id int [pk, increment]
  section varchar(50) [not null]
  content_key varchar(100) [not null]
  content_value text [not null]
  content_type varchar(20) [default: 'text']
  display_order int [default: 0]
  is_active tinyint(1) [default: 1]
  
  // Tracking
  created_by int [note: 'FK to users (admin)']
  updated_by int [note: 'FK to users (admin)']
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    section [name: 'idx_cms_section']
    content_key [name: 'idx_cms_key']
    (section, display_order) [name: 'idx_cms_order']
  }
  
  Note: 'CMS content dengan tracking admin yang edit'
}

Table theme {
  id int [pk, increment]
  theme_name varchar(50) [not null, default: 'default']
  
  // Colors
  primary_color varchar(7) [not null, default: '#667eea']
  secondary_color varchar(7) [not null, default: '#764ba2']
  accent_color varchar(7) [not null, default: '#4CAF50']
  text_color varchar(7) [not null, default: '#333333']
  background_color varchar(7) [not null, default: '#ffffff']
  
  // Typography
  font_family varchar(100) [default: 'Segoe UI, sans-serif']
  
  // Status
  is_active tinyint(1) [default: 1]
  
  // Tracking
  updated_by int [note: 'FK to users (admin)']
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    is_active [name: 'idx_theme_active']
  }
  
  Note: 'Theme configuration dengan tracking admin'
}

// ============================================
// FURNITURE TABLES
// ============================================

Table furniture_categories {
  id int [pk, increment]
  name varchar(100) [not null]
  slug varchar(100) [unique, not null]
  description text
  icon_url varchar(255)
  display_order int [default: 0]
  is_active tinyint(1) [default: 1]
  
  // Tracking
  created_by int
  updated_by int
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    slug [name: 'idx_fcat_slug']
    is_active [name: 'idx_fcat_active']
  }
  
  Note: 'Furniture categories'
}

Table furniture {
  id int [pk, increment]
  category_id int [not null]
  
  // Basic Info
  name varchar(255) [not null]
  slug varchar(255) [unique, not null]
  description text
  
  // Dimensions (meter)
  width decimal(10,2) [not null]
  height decimal(10,2) [not null]
  depth decimal(10,2) [not null]
  weight decimal(10,2)
  
  // Pricing
  price decimal(12,2)
  currency varchar(3) [default: 'IDR']
  discount_percentage decimal(5,2) [default: 0]
  
  // Visual Assets
  image_url varchar(255)
  thumbnail_url varchar(255)
  model_3d_url varchar(255)
  
  // Attributes
  color varchar(50)
  material varchar(100)
  style varchar(50)
  brand varchar(100)
  model_number varchar(50)
  
  // Stock
  stock_quantity int [default: 0]
  is_available tinyint(1) [default: 1]
  is_featured tinyint(1) [default: 0]
  
  // SEO & Analytics
  tags varchar(255)
  view_count int [default: 0]
  
  // Tracking
  created_by int
  updated_by int
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    category_id [name: 'idx_furniture_cat']
    slug [name: 'idx_furniture_slug']
    is_available [name: 'idx_furniture_available']
  }
  
  Note: 'Furniture catalog dengan admin tracking'
}

// ============================================
// USER LAYOUTS (Room Designs by Users)
// ============================================

Table user_rooms {
  id int [pk, increment]
  user_id int [not null]
  
  room_name varchar(100) [not null]
  room_type enum('bedroom', 'living_room', 'kitchen', 'bathroom', 'office', 'other') [default: 'bedroom']
  
  // Dimensions
  width decimal(10,2) [not null, note: 'Room width (meter)']
  length decimal(10,2) [not null, note: 'Room length (meter)']
  height decimal(10,2) [default: 3.0, note: 'Room height (meter)']
  
  description text
  is_public tinyint(1) [default: 0, note: 'Share publicly']
  
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    user_id [name: 'idx_room_user']
    room_type [name: 'idx_room_type']
  }
  
  Note: 'User-created rooms for interior design'
}

Table user_layouts {
  id int [pk, increment]
  room_id int [not null]
  user_id int [not null]
  
  layout_name varchar(100) [not null]
  layout_data json [note: 'JSON: furniture positions, colors, etc']
  thumbnail_url varchar(255)
  
  // Style preferences
  style varchar(50)
  color_scheme varchar(50)
  budget_range enum('low', 'medium', 'high', 'luxury')
  
  is_favorite tinyint(1) [default: 0]
  is_public tinyint(1) [default: 0]
  
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    room_id [name: 'idx_layout_room']
    user_id [name: 'idx_layout_user']
    (user_id, is_favorite) [name: 'idx_user_favorites']
  }
  
  Note: 'User saved layouts/designs'
}

Table layout_furniture {
  id int [pk, increment]
  layout_id int [not null]
  furniture_id int [not null]
  
  // Position in room
  position_x decimal(10,2) [not null]
  position_y decimal(10,2) [not null]
  rotation decimal(10,2) [default: 0, note: 'Rotation angle 0-360']
  
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    layout_id [name: 'idx_lf_layout']
    furniture_id [name: 'idx_lf_furniture']
  }
  
  Note: 'Furniture items in user layouts'
}

// ============================================
// NEWS TABLES
// ============================================

Table news_categories {
  id int [pk, increment]
  name varchar(100) [unique, not null]
  slug varchar(100) [unique, not null]
  description text
  display_order int [default: 0]
  is_active tinyint(1) [default: 1]
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    slug [name: 'idx_ncat_slug']
    is_active [name: 'idx_ncat_active']
  }
}

Table news {
  id int [pk, increment]
  category_id int
  author_id int [note: 'FK to users (admin/editor)']
  
  title varchar(255) [not null]
  slug varchar(255) [unique, not null]
  excerpt text
  content text [not null]
  
  image_url varchar(255)
  thumbnail_url varchar(255)
  
  // SEO
  meta_title varchar(255)
  meta_description text
  meta_keywords varchar(255)
  
  // Publishing
  status enum('draft', 'published', 'archived') [default: 'draft']
  is_featured tinyint(1) [default: 0]
  published_at datetime
  
  // Analytics
  view_count int [default: 0]
  
  // Tracking
  created_by int [note: 'FK to users']
  updated_by int [note: 'FK to users']
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    category_id [name: 'idx_news_cat']
    author_id [name: 'idx_news_author']
    slug [name: 'idx_news_slug']
    status [name: 'idx_news_status']
    (status, published_at) [name: 'idx_published']
  }
  
  Note: 'News articles dengan author tracking'
}

// ============================================
// FAQ & Q&A TABLES
// ============================================

Table faq_categories {
  id int [pk, increment]
  name varchar(100) [unique, not null]
  slug varchar(100) [unique, not null]
  description text
  icon varchar(100)
  display_order int [default: 0]
  is_active tinyint(1) [default: 1]
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    slug [name: 'idx_faqcat_slug']
    is_active [name: 'idx_faqcat_active']
  }
}

Table faqs {
  id int [pk, increment]
  category_id int
  
  question text [not null]
  answer text [not null]
  
  display_order int [default: 0]
  is_active tinyint(1) [default: 1]
  
  // Analytics
  view_count int [default: 0]
  helpful_count int [default: 0]
  not_helpful_count int [default: 0]
  
  // Tracking
  created_by int
  updated_by int
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    category_id [name: 'idx_faq_cat']
    is_active [name: 'idx_faq_active']
  }
}

Table questions {
  id int [pk, increment]
  user_id int [note: 'NULL jika guest']
  
  // User info (jika guest)
  name varchar(100) [not null]
  email varchar(100) [not null]
  
  question text [not null]
  category_id int
  
  // Admin answer
  answer text
  answered_by int [note: 'FK to users (admin)']
  answered_at datetime
  
  status enum('pending', 'answered', 'closed') [default: 'pending']
  is_public tinyint(1) [default: 0]
  
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    user_id [name: 'idx_q_user']
    answered_by [name: 'idx_q_answered_by']
    status [name: 'idx_q_status']
    (status, created_at) [name: 'idx_pending_q']
  }
  
  Note: 'User questions dengan admin answer tracking'
}

// ============================================
// CONTACT & SUPPORT
// ============================================

Table contact_messages {
  id int [pk, increment]
  user_id int [note: 'NULL jika guest']
  
  name varchar(100) [not null]
  email varchar(100) [not null]
  phone varchar(20)
  
  subject varchar(255) [not null]
  message text [not null]
  
  status enum('new', 'read', 'replied', 'closed') [default: 'new']
  
  // Admin reply
  reply text
  replied_by int [note: 'FK to users (admin)']
  replied_at datetime
  
  // Tracking
  ip_address varchar(45)
  user_agent text
  
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    user_id [name: 'idx_contact_user']
    replied_by [name: 'idx_contact_replied_by']
    status [name: 'idx_contact_status']
  }
}

// ============================================
// ACTIVITY LOGS (untuk Admin Panel)
// ============================================

Table activity_logs {
  id int [pk, increment]
  user_id int [not null]
  
  action varchar(100) [not null, note: 'login, create, update, delete, etc']
  entity_type varchar(50) [note: 'cms, furniture, news, user, etc']
  entity_id int [note: 'ID of affected entity']
  
  description text
  ip_address varchar(45)
  user_agent text
  
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    user_id [name: 'idx_log_user']
    entity_type [name: 'idx_log_entity']
    created_at [name: 'idx_log_time']
  }
  
  Note: '''
    Activity logging untuk audit trail:
    - Admin actions tracking
    - Security monitoring
    - User activity history
  '''
}

// ============================================
// RELATIONSHIPS
// ============================================

// User Management
Ref: user_sessions.user_id > users.id [delete: cascade]

// CMS Tracking
Ref: cms.created_by > users.id [delete: set null]
Ref: cms.updated_by > users.id [delete: set null]
Ref: theme.updated_by > users.id [delete: set null]

// Furniture
Ref: furniture.category_id > furniture_categories.id [delete: restrict]
Ref: furniture.created_by > users.id [delete: set null]
Ref: furniture.updated_by > users.id [delete: set null]
Ref: furniture_categories.created_by > users.id [delete: set null]
Ref: furniture_categories.updated_by > users.id [delete: set null]

// User Layouts
Ref: user_rooms.user_id > users.id [delete: cascade]
Ref: user_layouts.room_id > user_rooms.id [delete: cascade]
Ref: user_layouts.user_id > users.id [delete: cascade]
Ref: layout_furniture.layout_id > user_layouts.id [delete: cascade]
Ref: layout_furniture.furniture_id > furniture.id [delete: restrict]

// News
Ref: news.category_id > news_categories.id [delete: set null]
Ref: news.author_id > users.id [delete: set null]
Ref: news.created_by > users.id [delete: set null]
Ref: news.updated_by > users.id [delete: set null]

// FAQ & Questions
Ref: faqs.category_id > faq_categories.id [delete: set null]
Ref: faqs.created_by > users.id [delete: set null]
Ref: faqs.updated_by > users.id [delete: set null]
Ref: questions.user_id > users.id [delete: set null]
Ref: questions.category_id > faq_categories.id [delete: set null]
Ref: questions.answered_by > users.id [delete: set null]

// Contact
Ref: contact_messages.user_id > users.id [delete: set null]
Ref: contact_messages.replied_by > users.id [delete: set null]

// Activity Logs
Ref: activity_logs.user_id > users.id [delete: cascade]
